# sanran

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md
cmake/: chk.cmake
include/chk/core/: log.h  math.h  vec.h
include/chk/sanran/: render_cmd.h  render_list.h  sanran.h  window.h
src/chk/core/: log.c  math.c  vec.c
src/chk/launcher/: main.c
src/chk/sanran/: render_cmd.c  render_list.c  sanran.c  window.c
